security jpa documentation update